# eudaq

./: .gitignore  CMakeLists.txt
cmake/: EUDAQThreads.cmake  FindW32Pthread.cmake
conf/: ni_autotrig.conf  test1.conf
images/: Thumbs.db
main/include/eudaq/: DeviceMimosa32.hh  Event.hh  Exception.hh  Queue.hh  Serializer.hh  Time.hh  TransportBase.hh  TransportTCP.hh  TransportTCP_WIN32.h  Utils.hh
main/lib/src/: EudaqThread.cc  ExplorerConverterPlugin.cc  FileWriterText.cc  FileWriterTextCompact.cc  SCTUpgradeConverterPlugin.cc
main/python/: CMakeLists.txt  RunControl.i
onlinemon/: CMakeLists.txt
onlinemon/include/: OnlineMon.hh  OnlineMonWindow.hh  SimpleStandardEvent.hh
onlinemon/src/: OnlineMon.cxx
producers/tlu/include/tlu/: TLUController.hh
producers/tlu/src/: TLUControl.cxx  TLUController.cc  TLUProducer.cxx
