FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(RunControl.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(RunControl.i PROPERTIES SWIG_FLAGS "-threads")
SWIG_ADD_MODULE(RunControl python RunControl.i ../lib/src/RunControl.cc)
SWIG_LINK_LIBRARIES(RunControl EUDAQ ${PYTHON_LIBRARIES})


install(
  TARGETS ${SWIG_MODULE_RunControl_REAL_NAME} 
  DESTINATION lib
)

INSTALL(FILES ${CMAKE_BINARY_DIR}/main/python/RunControl.py
	      DESTINATION lib)

